--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+<h1>Name of the destination</h1>
+	<p>Brief overview of the destination</p>
+	<br>
+	
+<ol>
+ <li><strong>Attraction 1</strong></li>
+  <li><em>Attraction 2</em></li>
+  <li><b>Attraction 3</b></li>
+  <li><i>Attraction 4</i></li>
+  <li><strong>Attraction 5</strong></li>
+	
+</ol>
+
+<ul>
+<li><strong>Food 1</strong></li>
+  <li><em>Food 2</em></li>
+  <li><b>Food 3</b></li>
+  <li><i>Food 4</i></li>
+  <li><strong>Food 5</strong></li>
+	
+</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
